--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "test:ci": "npm run lint && npm run test:unit",
     "setport": "HOST='0.0.0.0' PORT=80 npm run serve",
-    "start": "npm run build:prod && npm install && nodemon app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "axios": "0.18.1",
