--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
     "express": "^4.17.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "js-cookie": "2.2.0",
     "moment": "^2.29.1",
     "multer": "^1.4.3",
