--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "spanco",
   "version": "4.4.0",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "description": "SPAN COMPANY CO, LTD.",
+  "author": "k.bunchongwanit@gmail.com",
   "scripts": {
     "serve": "nodemon app.js",
     "dev": "vue-cli-service serve",
