--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "mysql2": "^2.3.3-rc.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
